test/EVENT_MIXING/Standard_DRmethod/NO_ETAPT/CONDOR/condor_treewriter_40041356_0.stderr
In file included from input_line_10:1:
/storage/local/data1/condor/execute/dir_42439/DoubleJpsi_mix_noetapt_0.cxx:20:10: fatal error: 'scriptName1' file not found
#include "scriptName1"
         ^~~~~~~~~~~~~
